# open-webui-developer-toolkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md
functions/pipes/openai_responses_manifold/: AGENTS.md  CHANGELOG.md  Makefile  PIPELINE_ARCHITECTURE.md  README.md  openai_responses_manifold.py  proposed_feature_ports.md  pyproject.toml
functions/pipes/openai_responses_manifold/.OLD_DO_NOT_REFERENCE/openai_responses_manifold/: __init__.py  adapters.py  client.py  emitters.py  logging_utils.py  markers.py  models.py  persistence.py  pipe.py  router.py  runner.py  session.py  tools.py  valves.py
functions/pipes/openai_responses_manifold/.workpackages/: code_quality_refactors.md  full_rewrite_openai_responses_manifold.md  logging_enhancement.md  logging_system_overhaul.md  refactor_openai_responses_manifold.md  testing_suite_overhaul.md
functions/pipes/openai_responses_manifold/scripts/: build.py
functions/pipes/openai_responses_manifold/src/: manifest.py
functions/pipes/openai_responses_manifold/src/openai_responses_manifold/: __init__.py
functions/pipes/openai_responses_manifold/src/openai_responses_manifold/app/: pipe.py
functions/pipes/openai_responses_manifold/src/openai_responses_manifold/core/: __init__.py  capabilities.py  (+4 more)
functions/pipes/openai_responses_manifold/tests/: README.md  conftest.py  fakes.py  test_markers_and_persistence.py  test_pipe_contract.py  test_responses_body_from_completions.py  test_route_gpt5_auto.py  test_runner_scenarios.py  test_tools_building.py  test_transform_owui_tools.py  test_web_search_status.py
(+16 files in other folders)
