[project]
name = "openai-responses-manifold"
version = "0.1.0"
description = "OpenAI Responses manifold for Open WebUI"
requires-python = ">=3.11"
dependencies = [
  "aiohttp",
  "fastapi",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",
  "I",
  "UP",
  "ASYNC",
  "RUF",
]

[tool.mypy]
python_version = "3.11"
packages = ["openai_responses_manifold"]
mypy_path = ["src"]
ignore_missing_imports = true
pretty = true
show_column_numbers = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
  "external*",
  "open-webui*",
  ".tests*",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ""
python_functions = "test_*"
norecursedirs = [
  "dist",
  "build",
  ".workpackages",
]
addopts = """
-ra
--import-mode=importlib
--cov=openai_responses_manifold
--cov-branch
--cov-report=term-missing
--asyncio-mode=auto
--color=yes
"""
pythonpath = [
  "src",
  "../../..",
  "../../../external/open-webui/backend",
]
